objects/Current_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Current Products</relationshipLabel>
        <relationshipName>Current_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BA_Or_Comp__c</fullName>
        <label>BA Or Comp</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Cede</fullName>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier_Id__c</fullName>
        <label>Carrier Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_BAs__c</fullName>
        <label>Number Of BAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Current Products</relationshipLabel>
        <relationshipName>Current_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCC</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>Group Govt</fullName>
                </value>
                <value>
                    <fullName>HCA</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>IHI</fullName>
                </value>
                <value>
                    <fullName>Nurseline</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Ancillary and Other</fullName>
                </value>
                <value>
                    <fullName>Blue Directions</fullName>
                </value>
                <value>
                    <fullName>Consumerism</fullName>
                </value>
                <value>
                    <fullName>Health Management</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Current Products</relationshipLabel>
        <relationshipName>Current_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Simplified_Product__c</fullName>
        <label>Simple Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Current Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Simplified_Product__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Carrier_Name__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Number_Of_BAs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Current Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>